--- a/index.html
+++ b/index.html
@@ -975,7 +975,7 @@
                         Come enjoy what <strong class="f-red">RUUTED</strong> has to offer, and let's share it with the world!
                       </p>
                       <p class="mb--20">
-                        <a class="rn-btn mt--10" href="https://www.eventbrite.ca/e/ruuted-with-corey-dawkins-and-gene-king-tickets-1023029848817?aff=oddtdtcreator" target="_blank">Advance Tickets</a>
+                        <a class="rn-btn mt--10" href="https://www.eventbrite.com/e/1057525500239?aff=oddtdtcreator" target="_blank">Advance Tickets</a>
                       </p>
                     </div>
                     <div class="col-lg-4 position-relative">
@@ -990,15 +990,15 @@
                       <div class="details">
                         <div class="info">
                           <div class="date position-absolute">
-                            <div class="month">Oct</div>
-                            <div class="day">11<sup>th</sup></div>
+                            <div class="month">Nov</div>
+                            <div class="day">8<sup>th</sup></div>
                           </div>
                           <ul>
                             <li class="strong">Friday, 10:00 pm</li>
                             <li class="venue strong">Junction Underground</li>
                             <li>2907 Dundas Street West, Toronto</li>
-                            <li class="price strong">$15 <em>at the door</em></li>
-                            <li><a class="rn-btn mt--10" href="https://www.eventbrite.ca/e/ruuted-with-corey-dawkins-and-gene-king-tickets-1023029848817?aff=oddtdtcreator" target="_blank">Get Tickets!</a></li>
+                            <li class="price strong">$20 <em>at the door</em></li>
+                            <li><a class="rn-btn mt--10" href="https://www.eventbrite.com/e/1057525500239?aff=oddtdtcreator" target="_blank">Get Tickets!</a></li>
                           </ul>
                         </div>
                         <div class="guest-dj">
@@ -1063,7 +1063,7 @@
                             </div>
                           </div>
                           <!-- If guest starring Gene King, remove .hide and put it on other DJs -->
-                          <div class="row pb-10">
+                          <div class="row pb-10 hide">
                             <div class="col-5"><img class="w-100" src="assets/images/team/gene-king.png" alt="Gene King" /></div>
                             <div class="col-7 text-start">
                               <h6 class="f-inherit">Guest starring</h6>
@@ -1084,6 +1084,29 @@
                                 <li class="text-uppercase f-white">Leo Love</li>
                                 <li><a href="https://instagram.com/leo_love74" target="_blank" class="f-yellow"><i class="fab fa-instagram" aria-hidden="true"></i> @leo_love74</a></li>
                               </ul>
+                            </div>
+                          </div>
+                          <!-- If guest starring two guests, remove .hide, and put it on other DJs-->
+                          <div class="row pb-10">
+                            <h6 class="f-inherit">Guest starring</h6>
+                            <div class="row">
+                              <div class="col-5"><img class="w-100" src="assets/images/team/ray-ray.png" alt="Ray Ray / djrayray.ca" /></div>
+                              <div class="col-7 text-start">
+                                <ul class="m-0">
+                                  <li class="text-uppercase text-white"><strong>Ray Ray</strong></li>
+                                  <li><a href="https://instagram.com/djrayrayca" target="_blank"><i class="fab fa-instagram" aria-hidden="true"></i> @djrayrayca</a></li>
+                                  <li><a href="https://djrayray.ca" target="_blank"><i class="fa fa-globe" aria-hidden="true"></i> djrayray.ca</a></li>
+                                </ul>
+                              </div>
+                            </div>
+                            <div class="row">
+                              <div class="col-5"><img class="w-100" src="assets/images/team/michaelmartins.jpg" alt="Michael Martins" /></div>
+                              <div class="col-7 text-start">
+                                <ul class="m-0">
+                                  <li class="text-uppercase text-white"><strong>Michael Martins</strong></li>
+                                  <li><a href="https://instagram.com/mike_the_floridian" target="_blank"><i class="fab fa-instagram" aria-hidden="true"></i> @mike_the_floridian</a></li>
+                                </ul>
+                              </div>
                             </div>
                           </div>
                           <hr>
