--- a/index.html
+++ b/index.html
@@ -1088,7 +1088,7 @@
                           </div>
                           <!-- If guest starring two guests, remove .hide, and put it on other DJs-->
                           <div class="row pb-10">
-                            <h6 class="f-inherit">Guest starring</h6>
+                            <h4 class="f-red">Guest starring</h4>
                             <div class="row">
                               <div class="col-5"><img class="w-100" src="assets/images/team/ray-ray.png" alt="Ray Ray / djrayray.ca" /></div>
                               <div class="col-7 text-start">
