--- a/index.html
+++ b/index.html
@@ -975,7 +975,7 @@
                         Come enjoy what <strong class="f-red">RUUTED</strong> has to offer, and let's share it with the world!
                       </p>
                       <p class="mb--20">
-                        <a class="rn-btn mt--10" href="https://www.eventbrite.com/e/1057525500239?aff=oddtdtcreator" target="_blank">Advance Tickets</a>
+                        <a class="rn-btn mt--10" href="https://www.eventbrite.ca/e/ruuted-with-corey-dawkins-and-dconcept-tickets-1083592507359?aff=oddtdtcreator" target="_blank">Advance Tickets</a>
                       </p>
                     </div>
                     <div class="col-lg-4 position-relative">
@@ -998,7 +998,7 @@
                             <li class="venue strong">Junction Underground</li>
                             <li>2907 Dundas Street West, Toronto</li>
                             <li class="price strong">$20 <em>at the door</em></li>
-                            <li><a class="rn-btn mt--10" href="https://www.eventbrite.com/e/1057525500239?aff=oddtdtcreator" target="_blank">Get Tickets!</a></li>
+                            <li><a class="rn-btn mt--10" href="https://www.eventbrite.ca/e/ruuted-with-corey-dawkins-and-dconcept-tickets-1083592507359?aff=oddtdtcreator" target="_blank">Get Tickets!</a></li>
                           </ul>
                         </div>
                         <div class="guest-dj">
@@ -1086,8 +1086,20 @@
                               </ul>
                             </div>
                           </div>
-                          <!-- If guest starring two guests, remove .hide, and put it on other DJs-->
+                          <!-- If guest starring dConcept, remove .hide and put it on other DJs -->
                           <div class="row pb-10">
+                            <div class="col-5"><img class="w-100" src="assets/images/team/dconcept.jpg" alt="" /></div>
+                            <div class="col-7 text-start">
+                              <h6 class="f-inherit">Guest starring</h6>
+                              <ul class="m-0">
+                                <hr class="f-red">
+                                <li class="text-uppercase f-white">dConcept</li>
+                                <li><a href="https://instagram.com/dconcept.dconcept" target="_blank" class="f-yellow"><i class="fab fa-instagram" aria-hidden="true"></i> @dconcept.dconcept</a></li>
+                              </ul>
+                            </div>
+                          </div>
+                          <!-- If guest starring two guests, remove .hide, and put it on other DJs-->
+                          <div class="row pb-10 hide">
                             <h4 class="f-red">Guest starring</h4>
                             <div class="row">
                               <div class="col-5"><img class="w-100" src="assets/images/team/ray-ray.png" alt="Ray Ray / djrayray.ca" /></div>
