--- a/index.html
+++ b/index.html
@@ -975,7 +975,7 @@
                         Come enjoy what <strong class="f-red">RUUTED</strong> has to offer, and let's share it with the world!
                       </p>
                       <p class="mb--20">
-                        <a class="rn-btn mt--10" href="https://www.eventbrite.ca/e/ruuted-with-corey-dawkins-and-dconcept-tickets-1083592507359?aff=oddtdtcreator" target="_blank">Advance Tickets</a>
+                        <a class="rn-btn mt--10" href="https://www.eventbrite.ca/e/ruuted-with-corey-dawkins-and-andrew-good-music-tickets-1131363110519" target="_blank">Advance Tickets</a>
                       </p>
                     </div>
                     <div class="col-lg-4 position-relative">
@@ -990,15 +990,15 @@
                       <div class="details">
                         <div class="info">
                           <div class="date position-absolute">
-                            <div class="month">Dec</div>
-                            <div class="day">14<sup>th</sup></div>
+                            <div class="month">Jan</div>
+                            <div class="day">25<sup>th</sup></div>
                           </div>
                           <ul>
                             <li class="strong">Saturday, 10:00 pm</li>
                             <li class="venue strong">Junction Underground</li>
                             <li>2907 Dundas Street West, Toronto</li>
                             <li class="price strong">$20 <em>at the door</em></li>
-                            <li><a class="rn-btn mt--10" href="https://www.eventbrite.ca/e/ruuted-with-corey-dawkins-and-dconcept-tickets-1083592507359?aff=oddtdtcreator" target="_blank">Get Tickets!</a></li>
+                            <li><a class="rn-btn mt--10" href="https://www.eventbrite.ca/e/ruuted-with-corey-dawkins-and-andrew-good-music-tickets-1131363110519" target="_blank">Get Tickets!</a></li>
                           </ul>
                         </div>
                         <div class="guest-dj">
@@ -1087,7 +1087,7 @@
                             </div>
                           </div>
                           <!-- If guest starring dConcept, remove .hide and put it on other DJs -->
-                          <div class="row pb-10">
+                          <div class="row pb-10 hide">
                             <div class="col-5"><img class="w-100" src="assets/images/team/dconcept.jpg" alt="" /></div>
                             <div class="col-7 text-start">
                               <h6 class="f-inherit">Guest starring</h6>
@@ -1095,6 +1095,18 @@
                                 <hr class="f-red">
                                 <li class="text-uppercase f-white">dConcept</li>
                                 <li><a href="https://instagram.com/dconcept.dconcept" target="_blank" class="f-yellow"><i class="fab fa-instagram" aria-hidden="true"></i> @dconcept.dconcept</a></li>
+                              </ul>
+                            </div>
+                          </div>
+                          <!-- If guest starring AndrewGoodMusic, remove .hide and put it on other DJs -->
+                          <div class="row pb-10">
+                            <div class="col-5"><img class="w-100" src="assets/images/team/agm.jpg" alt="" /></div>
+                            <div class="col-7 text-start">
+                              <h6 class="f-inherit">Guest starring</h6>
+                              <ul class="m-0">
+                                <hr class="f-red">
+                                <li class="text-uppercase f-white">Andrew Good Music</li>
+                                <li><a href="https://instagram.com/andrewgoodmusic" target="_blank" class="f-yellow"><i class="fab fa-instagram" aria-hidden="true"></i> @andrewgoodmusic</a></li>
                               </ul>
                             </div>
                           </div>
