--- a/index.html
+++ b/index.html
@@ -990,8 +990,8 @@
                       <div class="details">
                         <div class="info">
                           <div class="date position-absolute">
-                            <div class="month">Jan</div>
-                            <div class="day">25<sup>th</sup></div>
+                            <div class="month">Feb</div>
+                            <div class="day">22<sup>nd</sup></div>
                           </div>
                           <ul>
                             <li class="strong">Saturday, 10:00 pm</li>
@@ -1075,7 +1075,7 @@
                             </div>
                           </div>
                           <!-- If guest starring Leo Love, remove .hide and put it on other DJs -->
-                          <div class="row pb-10 hide">
+                          <div class="row pb-10">
                             <div class="col-5"><img class="w-100" src="assets/images/team/leo-love.jpg" alt="" /></div>
                             <div class="col-7 text-start">
                               <h6 class="f-inherit">Guest starring</h6>
@@ -1099,7 +1099,7 @@
                             </div>
                           </div>
                           <!-- If guest starring AndrewGoodMusic, remove .hide and put it on other DJs -->
-                          <div class="row pb-10">
+                          <div class="row pb-10 hide">
                             <div class="col-5"><img class="w-100" src="assets/images/team/agm.jpg" alt="" /></div>
                             <div class="col-7 text-start">
                               <h6 class="f-inherit">Guest starring</h6>
