--- a/index.html
+++ b/index.html
@@ -975,7 +975,7 @@
                         Come enjoy what <strong class="f-red">RUUTED</strong> has to offer, and let's share it with the world!
                       </p>
                       <p class="mb--20">
-                        <a class="rn-btn mt--10" href="https://www.eventbrite.ca/e/ruuted-with-corey-dawkins-and-dj-lazy-e-tickets-1275130221819?aff=oddtdtcreator" target="_blank">Advance Tickets</a>
+                        <a class="rn-btn mt--10" href="https://www.eventbrite.ca/e/ruuted-with-corey-dawkins-and-marcelo-cruz-tickets-1309165712889?aff=oddtdtcreator" target="_blank">Advance Tickets</a>
                       </p>
                     </div>
                     <div class="col-lg-4 position-relative">
@@ -990,19 +990,31 @@
                       <div class="details">
                         <div class="info">
                           <div class="date position-absolute">
-                            <div class="month">Mar</div>
-                            <div class="day">22<sup>nd</sup></div>
+                            <div class="month">Apr</div>
+                            <div class="day">26<sup>th</sup></div>
                           </div>
                           <ul>
                             <li class="strong">Saturday, 10:00 pm</li>
                             <li class="venue strong">Junction Underground</li>
                             <li>2907 Dundas Street West, Toronto</li>
                             <li class="price strong">$20 <em>at the door</em></li>
-                            <li><a class="rn-btn mt--10" href="https://www.eventbrite.ca/e/ruuted-with-corey-dawkins-and-dj-lazy-e-tickets-1275130221819?aff=oddtdtcreator" target="_blank">Get Tickets!</a></li>
+                            <li><a class="rn-btn mt--10" href="https://www.eventbrite.ca/e/ruuted-with-corey-dawkins-and-marcelo-cruz-tickets-1309165712889?aff=oddtdtcreator" target="_blank">Get Tickets!</a></li>
                           </ul>
                         </div>
                         <div class="guest-dj">
                           <hr>
+                          <!-- If guest starring Marcelo, remove .hide and put it on other DJs -->
+                          <div class="row pb-10 hide">
+                            <div class="col-5"><img class="w-100" src="assets/images/team/marcelo-cruz.jpg" alt="" /></div>
+                            <div class="col-7 text-start">
+                              <h6 class="f-inherit">Guest starring</h6>
+                              <ul class="m-0">
+                                <hr class="f-red">
+                                <li class="text-uppercase f-white">Marcelo Cruz</li>
+                                <li><a href="https://instagram.com/marcelo_b_munoz" target="_blank" class="f-yellow"><i class="fab fa-instagram" aria-hidden="true"></i> @marcelo_b_munoz</a></li>
+                              </ul>
+                            </div>
+                          </div>
                           <!-- If guest starring Vinny, remove .hide and put it on other DJs -->
                           <div class="row pb-10 hide">
                             <div class="col-5"><img class="w-100" src="assets/images/team/vinny-gruvhunter.jpg" alt="" /></div>
