--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <title>Corey Dawkins | Toronto DJ, Producer & Promoter</title>
-    <meta name="robots" content="noindex, follow" />
+    <meta name="robots" content="index, follow" />
     <meta
       name="description"
       content="Looking for a professional DJ who can cater to any event and keep the crowd entertained? Look no further than Corey Dawkins! With years of experience and a versatile music library that spans all genres, Corey has the expertise and skill to create the perfect vibe for weddings, corporate events, parties, and more. From sound system setup to customized track lists, Corey delivers top-notch service that ensures your event is a success. Book Corey Dawkins today and get ready to dance the night away!"
