--- a/index.html
+++ b/index.html
@@ -976,6 +976,7 @@
                       </p>
                       <p class="mb--20">
                         <a class="rn-btn mt--10" href="https://www.eventbrite.ca/e/ruuted-with-corey-dawkins-and-ron-jon-tickets-1349178883359?aff=oddtdtcreator" target="_blank">Advance Tickets</a>
+                        <p><pre>* Advance tickets are discounted!</pre></p>
                       </p>
                     </div>
                     <div class="col-lg-4 position-relative">
