--- a/index.html
+++ b/index.html
@@ -975,8 +975,8 @@
                         Come enjoy what <strong class="f-red">RUUTED</strong> has to offer, and let's share it with the world!
                       </p>
                       <p class="mb--20">
-                        <a class="rn-btn mt--10" href="https://www.eventbrite.ca/e/ruuted-with-corey-dawkins-and-ron-jon-tickets-1349178883359?aff=oddtdtcreator" target="_blank">Advance Tickets</a>
-                        <p><pre>* Advance tickets are discounted!</pre></p>
+                        <a class="rn-btn mt--10" href="https://www.eventbrite.ca/e/ruuted-with-corey-dawkins-and-ron-jon-tickets-1349178883359?aff=oddtdtcreator" target="_blank">Advance Tickets*</a>
+                        <p><pre>*Advance tickets are discounted!</pre></p>
                       </p>
                     </div>
                     <div class="col-lg-4 position-relative">
