--- a/index.html
+++ b/index.html
@@ -999,8 +999,7 @@
                             <li class="venue strong">Junction Underground</li>
                             <li>2907 Dundas Street West, Toronto</li>
                             <li class="price strong">$20 <em>at the door</em></li>
-                            <li>Discounted when purchased in advance.</li>
-                            <li><a class="rn-btn mt--10" href="https://www.eventbrite.ca/e/ruuted-with-corey-dawkins-and-ron-jon-tickets-1349178883359?aff=oddtdtcreator" target="_blank">Get Tickets!</a></li>
+                            <li><a class="rn-btn mt--10" href="https://www.eventbrite.ca/e/ruuted-with-corey-dawkins-and-ron-jon-tickets-1349178883359?aff=oddtdtcreator" target="_blank">Get Tickets!*</a></li>
                           </ul>
                         </div>
                         <div class="guest-dj">
