--- a/index.html
+++ b/index.html
@@ -966,7 +966,7 @@
                         Come enjoy what <strong class="f-red">RUUTED</strong> has to offer, and let's share it with the world!
                       </p>
                       <p class="mb--20">
-                        <a class="rn-btn mt--10" href="https://www.eventbrite.ca/e/ruuted-with-corey-dawkins-and-ron-jon-tickets-1349178883359?aff=oddtdtcreator" target="_blank">Advance Tickets*</a>
+                        <a class="rn-btn mt--10" href="https://www.eventbrite.ca/e/ruuted-with-corey-dawkins-and-king-curtiss-winston-tickets-1403000043899" target="_blank">Advance Tickets*</a>
                         <p><pre>*Advance tickets are discounted!</pre></p>
                       </p>
                     </div>
@@ -982,15 +982,15 @@
                       <div class="details">
                         <div class="info">
                           <div class="date position-absolute">
-                            <div class="month">May</div>
-                            <div class="day">31<sup>th</sup></div>
+                            <div class="month">Jun</div>
+                            <div class="day">21<sup>st</sup></div>
                           </div>
                           <ul>
                             <li class="strong">Saturday, 10:00 pm</li>
                             <li class="venue strong">Junction Underground</li>
                             <li>2907 Dundas Street West, Toronto</li>
                             <li class="price strong">$20 <em>at the door</em></li>
-                            <li><a class="rn-btn mt--10" href="https://www.eventbrite.ca/e/ruuted-with-corey-dawkins-and-ron-jon-tickets-1349178883359?aff=oddtdtcreator" target="_blank">Get Tickets!*</a></li>
+                            <li><a class="rn-btn mt--10" href="https://www.eventbrite.ca/e/ruuted-with-corey-dawkins-and-king-curtiss-winston-tickets-1403000043899" target="_blank">Get Tickets!*</a></li>
                           </ul>
                         </div>
                         <div class="guest-dj">
@@ -1020,7 +1020,7 @@
                             </div>
                           </div>
                           <!-- If guest starring Ron, remove .hide, and put it on other DJs-->
-                          <div class="row pb-10">
+                          <div class="row pb-10 hide">
                             <div class="col-5"><img class="w-100" src="assets/images/team/ron-jon.jpg" alt="DJ Ron Jon on Instagram" /></div>
                             <div class="col-7 text-start">
                               <h6 class="f-inherit">Guest starring</h6>
@@ -1039,6 +1039,17 @@
                                 <li class="text-uppercase text-white"><strong>Ray Ray</strong></li>
                                 <li><a href="https://instagram.com/djrayrayca" target="_blank"><i class="fab fa-instagram" aria-hidden="true"></i> @djrayrayca</a></li>
                                 <li><a href="https://djrayray.ca" target="_blank"><i class="fa fa-globe" aria-hidden="true"></i> djrayray.ca</a></li>
+                              </ul>
+                            </div>
+                          </div>
+                          <!-- If guest starring King Curtiss Winston, remove .hide, and put it on other DJs-->
+                          <div class="row pb-10">
+                            <div class="col-5"><img class="w-100" src="assets/images/team/kingcurtiss.png" alt="King Curtiss Winston" /></div>
+                            <div class="col-7 text-start">
+                              <h6 class="f-inherit">Guest starring</h6>
+                              <ul class="m-0">
+                                <li class="text-uppercase text-white"><strong>King Curtiss Winston</strong></li>
+                                <li><a href="https://instagram.com/afrorocker1" target="_blank"><i class="fab fa-instagram" aria-hidden="true"></i> @afrorocker1</a></li>
                               </ul>
                             </div>
                           </div>
