--- a/index.html
+++ b/index.html
@@ -76,9 +76,12 @@
                     <a class="nav-link" href="#service">Services</a>
                   </li>
                   <li class="nav-item">
+                    <a class="nav-link" href="#ruuted">RUUTED</a>
+                  </li>
+                  <li class="nav-item hide">
                     <a class="nav-link" href="#portfolio">Upcoming Events</a>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item hide">
                     <a class="nav-link" href="#blog">Past Events</a>
                   </li>
                   <li class="nav-item">
