--- a/index.html
+++ b/index.html
@@ -969,7 +969,7 @@
                         Come enjoy what <strong class="f-red">RUUTED</strong> has to offer, and let's share it with the world!
                       </p>
                       <p class="mb--20">
-                        <a class="rn-btn mt--10" href="https://www.eventbrite.ca/e/ruuted-with-corey-dawkins-and-king-curtiss-winston-tickets-1403000043899" target="_blank">Advance Tickets*</a>
+                        <a class="rn-btn mt--10" href="https://www.eventbrite.ca/e/ruuted-with-corey-dawkins-and-dj-ritchie-tickets-1450809071989" target="_blank">Advance Tickets*</a>
                         <p><pre>*Advance tickets are discounted!</pre></p>
                       </p>
                     </div>
@@ -985,15 +985,15 @@
                       <div class="details">
                         <div class="info">
                           <div class="date position-absolute">
-                            <div class="month">Jun</div>
-                            <div class="day">21<sup>st</sup></div>
+                            <div class="month">Jul</div>
+                            <div class="day">12<sup>th</sup></div>
                           </div>
                           <ul>
                             <li class="strong">Saturday, 10:00 pm</li>
                             <li class="venue strong">Junction Underground</li>
                             <li>2907 Dundas Street West, Toronto</li>
                             <li class="price strong">$20 <em>at the door</em></li>
-                            <li><a class="rn-btn mt--10" href="https://www.eventbrite.ca/e/ruuted-with-corey-dawkins-and-king-curtiss-winston-tickets-1403000043899" target="_blank">Get Tickets!*</a></li>
+                            <li><a class="rn-btn mt--10" href="https://www.eventbrite.ca/e/ruuted-with-corey-dawkins-and-dj-ritchie-tickets-1450809071989" target="_blank">Get Tickets!*</a></li>
                           </ul>
                         </div>
                         <div class="guest-dj">
@@ -1045,8 +1045,18 @@
                               </ul>
                             </div>
                           </div>
-                          <!-- If guest starring King Curtiss Winston, remove .hide, and put it on other DJs-->
+                          <!-- If guest starring DJ Ritchie, remove .hide, and put it on other DJs-->
                           <div class="row pb-10">
+                            <div class="col-5"><img class="w-100" src="assets/images/team/djritchie.png" alt="DJ Ritchie" /></div>
+                            <div class="col-7 text-start">
+                              <h6 class="f-inherit">Guest starring</h6>
+                              <ul class="m-0">
+                                <li class="text-uppercase text-white"><strong>DJ Ritchie</strong></li>
+                              </ul>
+                            </div>
+                          </div>
+                          <!-- If guest starring King Curtiss Winston, remove .hide, and put it on other DJs-->
+                          <div class="row pb-10 hide">
                             <div class="col-5"><img class="w-100" src="assets/images/team/kingcurtiss.png" alt="King Curtiss Winston" /></div>
                             <div class="col-7 text-start">
                               <h6 class="f-inherit">Guest starring</h6>
