--- a/index.html
+++ b/index.html
@@ -969,8 +969,8 @@
                         Come enjoy what <strong class="f-red">RUUTED</strong> has to offer, and let's share it with the world!
                       </p>
                       <p class="mb--20">
-                        <a class="rn-btn mt--10" href="https://www.eventbrite.ca/e/ruuted-with-corey-dawkins-and-dj-ritchie-tickets-1450809071989" target="_blank">Advance Tickets*</a>
-                        <p><pre>*Advance tickets are discounted!</pre></p>
+                        <a class="rn-btn mt--10" href="https://www.eventbrite.ca/e/ruuted-with-corey-dawkins-and-dj-ritchie-tickets-1450809071989" target="_blank">Advance Tickets</a>
+                        <p class="hide"><pre>*Advance tickets are discounted!</pre></p>
                       </p>
                     </div>
                     <div class="col-lg-4 position-relative">
@@ -993,7 +993,7 @@
                             <li class="venue strong">Junction Underground</li>
                             <li>2907 Dundas Street West, Toronto</li>
                             <li class="price strong">$20 <em>at the door</em></li>
-                            <li><a class="rn-btn mt--10" href="https://www.eventbrite.ca/e/ruuted-with-corey-dawkins-and-dj-ritchie-tickets-1450809071989" target="_blank">Get Tickets!*</a></li>
+                            <li><a class="rn-btn mt--10" href="https://www.eventbrite.ca/e/ruuted-with-corey-dawkins-and-dj-ritchie-tickets-1450809071989" target="_blank">Get Tickets!</a></li>
                           </ul>
                         </div>
                         <div class="guest-dj">
